# graphql-core-printers

./: .gitignore  Pipfile  README.rst  pyproject.toml  setup.py
graphql_filtered_printer/: __init__.py  compact_printing_visitor.py  filtering_visitor.py
graphql_printers/: __init__.py  backends.py  filtering_visitor.py
tests/: test_backends.py  test_compact_printer.py  test_filtered_printer.py
tests/snapshots/: snap_test_backends.py  snap_test_filtered_printer.py
